--- a/Projectandroid/app/src/main/res/values/strings.xml
+++ b/Projectandroid/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="Anime">Anime</string>
     <string name="sports">sports</string>
     <string name="commencer">commencer</string>
+    <string name="Music">Music</string>
 </resources>
