--- a/Projectandroid/app/src/main/res/values/strings.xml
+++ b/Projectandroid/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="sports">sports</string>
     <string name="commencer">commencer</string>
     <string name="Music">Music</string>
+    <string name="Images">Images</string>
 </resources>
